# labs_os

./: CMakeLists.txt
lab_1/: CMakeLists.txt
lab_1/src/: child.cpp  parent.cpp  parent.h  utils.cpp  utils.h
lab_1/tests/: tests.cpp
lab_2/: CMakeLists.txt  main.cpp
lab_2/src/mergesort/: mergesort.cpp  mergesort.h
lab_2/src/mergesortthreaded/: mergesortthreaded.cpp  mergesortthreaded.h
lab_2/src/threadwork/: threadwork.cpp  threadwork.h
lab_2/tests/: tests.cpp
lab_3/: CMakeLists.txt  main.cpp
lab_3/src/: child.cpp  parent.cpp  utils.cpp
lab_3/src/consts/: Consts.h
lab_3/src/sharedFile/: SharedFile.cpp  SharedFile.h
lab_3/src/sharedMem/: SharedMem.cpp  SharedMem.h
lab_3/src/sharedSem/: SharedSem.cpp  SharedSem.h
lab_3/tests/: tests.cpp
lab_4/: CMakeLists.txt  main.cpp
lab_4/src/dynamic/: dynamic.cpp
lab_4/src/libraryFirst/: libraryFirst.h  piFirst.cpp  translationFirst.cpp
lab_4/src/librarySecond/: librarySecond.h  piSecond.cpp  translationSecond.cpp
lab_4/src/static/: static.cpp
lab_4/tests/: test1.cpp  test2.cpp  tests.cpp
